Details
-
Bug
-
Resolution: Done
-
P1: Critical
-
5.12.1
-
Ubuntu Linux, Embedded Linux
-
-
aba6cea90e023c99ac55b0e8dcdeae0af8305ef2 (qt/qtdeclarative/5.12)
Description
Steps to reproduce:
- Run the attached example project
- MouseArea (inside Delegate) receives TouchBegin event and TouchCancel after it.
- Change currentIndex
Expected result:
- Scrolling is started to currentIndex
Actual result:
- Scrolling is not started